--- a/docbuild/api/Scrapbook101core.Models.AssetItem.yml
+++ b/docbuild/api/Scrapbook101core.Models.AssetItem.yml
@@ -21,8 +21,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: AssetItem
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 150
@@ -66,8 +66,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Name
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 152
@@ -101,8 +101,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Size
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 155
@@ -136,8 +136,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 158
@@ -171,8 +171,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 163
@@ -209,8 +209,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: GetHashCode
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 170
@@ -244,8 +244,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: working
-      repo: https://github.com/travelmarx/scrapbook101core.git
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
     id: CompareTo
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 174
