--- a/docbuild/api/Scrapbook101core.Models.AssetItem.yml
+++ b/docbuild/api/Scrapbook101core.Models.AssetItem.yml
@@ -21,8 +21,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AssetItem
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 150
@@ -35,6 +35,7 @@ items:
     content: 'public class AssetItem : IComparable<AssetItem>'
     content.vb: >-
       Public Class AssetItem
+
           Implements IComparable(Of AssetItem)
   inheritance:
   - System.Object
@@ -66,8 +67,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Name
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 152
@@ -101,8 +102,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Size
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 155
@@ -136,8 +137,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 158
@@ -171,8 +172,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Equals
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 163
@@ -209,8 +210,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetHashCode
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 170
@@ -244,8 +245,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CompareTo
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 174
